--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,62 +8,73 @@
     android:layout_height="match_parent"
     tools:context=".WelcomeActivity">
 
-    <ImageView
-        android:id="@+id/logoImageView"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="167dp"
-        android:layout_marginTop="0dp"
-        android:contentDescription="App Logo"
-        android:src="@drawable/banner"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_height="0dp"
+        android:layout_margin="12dp"
+        android:background="@drawable/background_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <ImageView
+            android:id="@+id/logoImageView31"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:contentDescription="banner"
+            android:src="@drawable/banner"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.7"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/welcomeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:text="Welcome!"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/logoImageView31" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/welcomeText"
-        android:layout_width="wrap_content"
+        android:id="@+id/userInfoText31"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="Welcome !"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="196dp"
+        android:gravity="center"
+        android:text="Only available for the user. If you are a user and related to the financer, choose this option by filling in your username and password. User can check their Transactions and Pay Instalments by logging in to this page."
+        app:layout_constraintBottom_toTopOf="@+id/socialLoginLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logoImageView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/financeInfoText"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="36dp"
         android:gravity="center"
         android:text="Only available for Financer. If you are a financer, choose this option by filling in your username and password."
-        app:layout_constraintBottom_toTopOf="@id/Financebtn"
+        app:layout_constraintBottom_toTopOf="@+id/userInfoText31"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/welcomeText"
-        app:layout_constraintVertical_bias="0.224" />
-
-
-    <TextView
-        android:id="@+id/userInfoText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:gravity="center"
-        android:text="Only available for the user. If you are a user and related to the financer, choose this option by filling in your username and password. User can check their Transactions and Pay Instalments by logging in to this page."
-        app:layout_constraintBottom_toTopOf="@id/Userbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/financeInfoText"
-        app:layout_constraintVertical_bias="0.368" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <Button
         android:id="@+id/Financebtn"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
+        android:layout_width="136dp"
+        android:layout_height="63dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="192dp"
         android:backgroundTint="@color/blue"
@@ -71,13 +83,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeText"
-        app:layout_constraintVertical_bias="0.712"
-        app:layout_constraintWidth_percent="0.7" />
+        tools:ignore="NotSibling" />
 
     <Button
         android:id="@+id/Userbtn"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="136dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_button_border"
         android:backgroundTint="@android:color/transparent"
@@ -86,19 +97,19 @@
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.67"
         app:layout_constraintStart_toEndOf="@+id/Financebtn"
-        app:layout_constraintTop_toTopOf="@+id/Financebtn"
-        app:layout_constraintWidth_percent="0.7" />
+        app:layout_constraintTop_toTopOf="@+id/Financebtn" />
 
     <LinearLayout
         android:id="@+id/socialLoginLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/Userbtn"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/Userbtn">
+        <!-- Add social login buttons here -->
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
