--- a/app/src/main/res/layout/activity_finance_login.xml
+++ b/app/src/main/res/layout/activity_finance_login.xml
@@ -8,6 +8,15 @@
     android:background="@color/white"
     tools:context=".FinanceLoginActivity">
 
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:src="@drawable/baseline_arrow_back_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <!-- Login Title -->
     <TextView
         android:id="@+id/loginTitle"
