--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -75,7 +75,7 @@
         android:id="@+id/Financebtn"
         android:layout_width="136dp"
         android:layout_height="63dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="192dp"
         android:backgroundTint="@color/blue"
         android:text="Finance"
@@ -83,6 +83,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeText"
+        app:layout_constraintVertical_bias="0.695"
         tools:ignore="NotSibling" />
 
     <Button
@@ -97,6 +98,7 @@
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.616"
         app:layout_constraintStart_toEndOf="@+id/Financebtn"
         app:layout_constraintTop_toTopOf="@+id/Financebtn" />
 
