1.dark theme and light theme added almost evrey whear 2.statusbar color is updated

--- a/app/src/main/res/drawable/logo_with_background.xml
+++ b/app/src/main/res/drawable/logo_with_background.xml
@@ -11,7 +11,7 @@
     <!-- Logo on top of the background -->
     <item>
         <bitmap
-            android:src="@drawable/main"
+            android:src="@drawable/app_icon"
             android:gravity="center"
             android:antialias="true"/>
     </item>
