--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -131,7 +131,7 @@
         android:layout_height="wrap_content"
         android:text="Register"
         android:textColor="@android:color/white"
-        app:backgroundTint="@color/blue"
+        app:backgroundTint="?attr/colorPrimary"
         app:layout_constraintTop_toBottomOf="@id/show_confirm_password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
