--- a/app/src/main/res/layout/activity_finance_home.xml
+++ b/app/src/main/res/layout/activity_finance_home.xml
@@ -22,21 +22,19 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/blue"
             android:title="Fund Flow"
             app:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark"
-            app:titleTextColor="@color/black" />
+            app:titleTextColor="@color/white" />
 
-
-        <!-- TabLayout for Chats, Status, Calls -->
+        <!-- TabLayout for All, Received, Pending -->
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabIndicatorColor="@color/blue"
-            app:tabSelectedTextColor="@color/blue"
-            app:tabTextColor="@color/blue" />
-
+            app:tabIndicatorColor="@color/black"
+            app:tabSelectedTextColor="@color/black"
+            app:tabTextColor="@color/black" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <!-- ViewPager2 for holding the fragments -->
@@ -49,8 +47,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-
-<!--     Floating Action Button (FAB) -->
+    <!-- Floating Action Button (FAB) -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -59,7 +56,7 @@
         android:src="@android:drawable/ic_input_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:backgroundTint="?attr/colorPrimary"
+        app:backgroundTint="@color/blue"
         app:tint="@android:color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
