--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -51,11 +51,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="156dp"
         android:gravity="center"
         android:text="Only available for the user. If you are a user and related to the financer, choose this option by filling in your username and password. User can check their Transactions and Pay Instalments by logging in to this page."
         app:layout_constraintBottom_toTopOf="@+id/socialLoginLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.875"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -69,38 +70,47 @@
         app:layout_constraintBottom_toTopOf="@+id/userInfoText31"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintVertical_bias="0.865" />
 
     <Button
         android:id="@+id/Financebtn"
         android:layout_width="136dp"
         android:layout_height="63dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="192dp"
-        android:backgroundTint="?attr/colorPrimary"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/blue"
         android:text="Finance"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.109"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
-        app:layout_constraintVertical_bias="0.695"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="NotSibling" />
 
     <Button
         android:id="@+id/Userbtn"
         android:layout_width="136dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_button_border"
-        android:backgroundTint="@android:color/transparent"
+        android:layout_height="63dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/blue"
         android:padding="12dp"
         android:text="User"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.616"
+        app:layout_constraintHorizontal_bias="0.604"
         app:layout_constraintStart_toEndOf="@+id/Financebtn"
-        app:layout_constraintTop_toTopOf="@+id/Financebtn" />
+        app:layout_constraintTop_toTopOf="@+id/Financebtn"
+        app:layout_constraintVertical_bias="1.0" />
 
     <LinearLayout
         android:id="@+id/socialLoginLayout"
