--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#00008B</color>
+    <color name="blue">#008B8B</color>
     <color name="light_blue">#C4E4FF</color>
 </resources>
