--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -61,7 +61,11 @@
         app:layout_constraintTop_toBottomOf="@id/appBarLayout2"
         app:layout_constraintBottom_toBottomOf="parent"
 
-        android:background="@color/white"/>
+        android:background="@color/white">
+
+    </FrameLayout>
+
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="80dp"
@@ -69,7 +73,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/bottom_menu"
+        app:menu="@menu/bottom_menu_user"
         android:background="?attr/colorPrimary"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
