--- a/app/src/main/res/layout/fragment_loans.xml
+++ b/app/src/main/res/layout/fragment_loans.xml
@@ -1,17 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoansFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- Card for SearchView -->
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/meterialcard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="8dp"
+        app:cardUseCompatPadding="true">
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/SearchView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:defaultQueryHint="Search for loans"
+            app:iconifiedByDefault="false"
+            app:queryBackground="@android:color/transparent" />
+    </com.google.android.material.card.MaterialCardView>
+
+    <!-- RecyclerView for Loan Items -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Loans "
-        android:gravity="center"
-        android:textSize="36sp"
-        android:textColor="@color/blue"/>
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="100dp"
+        android:padding="8dp" />
 
 </FrameLayout>
