--- a/app/src/main/res/menu/bottom_menu_user.xml
+++ b/app/src/main/res/menu/bottom_menu_user.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    >
     <item
         android:id="@+id/bottom_loans"
         android:icon="@drawable/loan"
@@ -10,6 +11,6 @@
         android:title="transaction" />
     <item
         android:id="@+id/action_profile"
-        android:icon="@drawable/baseline_account_circle_24"
-        android:title="profile"/>
+        android:icon="@drawable/baseline_space_dashboard_24"
+        android:title="dashboard"/>
 </menu>
