--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -6,50 +6,23 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserHomeActivity">
+    tools:context=".UserHomeActivity"
+    android:theme="@style/Base.Theme.FundFlow">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:backgroundTint="@color/blue"
         tools:ignore="MissingConstraints">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            app:titleTextColor="@color/blue"
-            app:contentInsetStart="10dp"
-            app:contentInsetLeft="0dp"
-            app:contentInsetRight="0dp"
-            app:contentInsetEnd="0dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                app:popupTheme="?attr/colorPrimary">
-
-                <ImageView
-                    android:id="@+id/logoImageView"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/app_icon"
-                    android:padding="8dp"
-                    android:background="@drawable/circular_shape"
-                    android:scaleType="fitCenter" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Fund Flow"
-                    android:textColor="@android:color/white"
-                    android:layout_marginStart="8dp"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
+            app:title="Fund Flow"
+            app:titleTextColor="@android:color/white"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
         </com.google.android.material.appbar.MaterialToolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -60,21 +33,17 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/appBarLayout2"
         app:layout_constraintBottom_toBottomOf="parent"
-
-        android:background="@color/white">
-
-    </FrameLayout>
-
+        android:background="@color/white"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:id="@+id/bottom_navigation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_menu_user"
-        android:background="?attr/colorPrimary"
+        app:backgroundTint="@color/blue"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
         app:itemPaddingBottom="10dp"
