--- a/app/src/main/res/layout/item_loan.xml
+++ b/app/src/main/res/layout/item_loan.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="#CCEDED">
 
         <!-- Loan Title -->
         <TextView
@@ -71,6 +72,7 @@
             android:text="View Details"
             android:layout_marginTop="8dp"
             android:layout_gravity="end"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:backgroundTint="@color/blue"/>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
