bottom_menu_user.xml is updated

--- a/app/src/main/res/layout/fragment_dashbord.xml
+++ b/app/src/main/res/layout/fragment_dashbord.xml
@@ -3,15 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TransactionFragment">
+    tools:context=".dashbordFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Transaction "
-        android:gravity="center"
-        android:textSize="36sp"
-        android:textColor="@color/blue"/>
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
