--- a/app/src/main/res/menu/bottom_menu_user.xml
+++ b/app/src/main/res/menu/bottom_menu_user.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     >
     <item
-        android:id="@+id/bottom_loans"
-        android:icon="@drawable/loan"
+        android:id="@+id/bottom_home"
+        android:icon="@drawable/baseline_home_24"
         android:title="loans"/>
     <item
-        android:id="@+id/bottom_transaction"
-        android:icon="@drawable/transaction"
-        android:title="transaction" />
+        android:id="@+id/bottom_loans"
+        android:icon="@drawable/loan"
+        android:title="loans" />
     <item
         android:id="@+id/action_profile"
         android:icon="@drawable/baseline_space_dashboard_24"
