--- a/app/src/main/res/layout/activity_finance_register.xml
+++ b/app/src/main/res/layout/activity_finance_register.xml
@@ -8,7 +8,6 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".FinanceRegisterActivity">
-
     <ImageView
         android:id="@+id/back"
         android:layout_width="wrap_content"
@@ -18,129 +17,127 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Profile Image Placeholder -->
     <ImageView
         android:id="@+id/profile_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/baseline_account_circle_24"
         android:scaleType="centerCrop"
-        android:contentDescription="@string/profile_image_description"
+        android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- First Name Input -->
     <EditText
         android:id="@+id/first_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="First Name"
-        android:padding="12dp"
-        android:backgroundTint="@color/black"
-        android:textColor="@android:color/black"
+        android:hint="Enter your first name"
+        android:padding="14dp"
+        android:background="@drawable/input_field_shadow"
+        android:elevation="5dp"
         app:layout_constraintTop_toBottomOf="@id/profile_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintWidth_percent="0.8"
+        android:layout_marginTop="24dp" />
 
-    <!-- Last Name Input -->
     <EditText
         android:id="@+id/last_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Last Name"
-        android:padding="12dp"
-        android:backgroundTint="@color/black"
-        android:textColor="@android:color/black"
+        android:hint="Enter your last name"
+        android:padding="14dp"
+        android:background="@drawable/input_field_shadow"
+        android:elevation="3dp"
         app:layout_constraintTop_toBottomOf="@id/first_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintWidth_percent="0.8"
+        android:layout_marginTop="16dp" />
 
-    <!-- Email Address Input -->
     <EditText
         android:id="@+id/email_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:hint="Enter your email"
         android:inputType="textEmailAddress"
-        android:padding="12dp"
-        android:backgroundTint="@color/black"
-        android:textColor="@android:color/black"
+        android:padding="14dp"
+        android:background="@drawable/input_field_shadow"
+        android:elevation="3dp"
         app:layout_constraintTop_toBottomOf="@id/last_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintWidth_percent="0.8"
+        android:layout_marginTop="16dp" />
 
-    <!-- Password Input -->
     <EditText
         android:id="@+id/password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="Enter your password"
         android:inputType="textPassword"
-        android:padding="12dp"
-        android:backgroundTint="@color/black"
-        android:textColor="@android:color/black"
+        android:padding="14dp"
+        android:background="@drawable/input_field_shadow"
+        android:elevation="3dp"
+        android:drawableEnd="@drawable/baseline_visibility_off_24"
+        android:drawablePadding="10dp"
         app:layout_constraintTop_toBottomOf="@id/email_address"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintWidth_percent="0.8"
+        android:layout_marginTop="20dp" />
 
-    <!-- Show Password Checkbox for Password -->
-    <CheckBox
-        android:id="@+id/show_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Show Password"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/password"
-        app:layout_constraintStart_toStartOf="@id/password"
-        android:layout_marginTop="8dp" />
-
-    <!-- Confirm Password Input -->
     <EditText
         android:id="@+id/confirm_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Confirm Password"
+        android:hint="Confirm your password"
         android:inputType="textPassword"
-        android:padding="12dp"
-        android:backgroundTint="@color/black"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/show_password"
+        android:padding="14dp"
+        android:background="@drawable/input_field_shadow"
+        android:elevation="3dp"
+        android:drawableEnd="@drawable/baseline_visibility_off_24"
+        android:drawablePadding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintWidth_percent="0.8"
+        android:layout_marginTop="16dp" />
 
-    <!-- Show Password Checkbox for Confirm Password -->
-    <CheckBox
-        android:id="@+id/show_confirm_password"
-        android:layout_width="wrap_content"
+    <!-- Mobile Number Input Field -->
+    <EditText
+        android:id="@+id/mobile_number"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Show Password"
-        android:textColor="@android:color/black"
+        android:hint="Enter your mobile number"
+        android:padding="14dp"
+        android:background="@drawable/input_field_shadow"
+        android:elevation="3dp"
+        android:inputType="phone"
+        android:maxLength="10"
         app:layout_constraintTop_toBottomOf="@id/confirm_password"
-        app:layout_constraintStart_toStartOf="@id/confirm_password"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.8"
+        android:layout_marginTop="16dp" />  <!-- Increased marginTop -->
 
-    <!-- Register Button -->
+
     <Button
         android:id="@+id/register_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Register"
         android:textColor="@android:color/white"
-        android:backgroundTint="?attr/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@id/show_confirm_password"
+        android:padding="12dp"
+        android:background="@drawable/rounded_button"
+        app:layout_constraintTop_toBottomOf="@id/mobile_number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="40dp" />
 
-    <!-- Terms and Conditions Checkbox -->
     <CheckBox
         android:id="@+id/terms_conditions"
         android:layout_width="wrap_content"
